--- a/uiforms/qtb.ui
+++ b/uiforms/qtb.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>316</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,12 +25,18 @@
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
-     <string>工具</string>
+     <string>Tools</string>
     </property>
+    <addaction name="actionMultiFileFormatTrans"/>
    </widget>
    <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionMultiFileFormatTrans">
+   <property name="text">
+    <string>MultiFileFormatTrans</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
