--- a/uiforms/serialprotocoldebugger.ui
+++ b/uiforms/serialprotocoldebugger.ui
@@ -97,6 +97,31 @@
     </rect>
    </property>
   </widget>
+  <widget class="QComboBox" name="cb_protocol">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>10</y>
+     <width>72</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>YaHei Consolas Hybrid</family>
+    </font>
+   </property>
+   <item>
+    <property name="text">
+     <string>raw</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>gnss</string>
+    </property>
+   </item>
+  </widget>
  </widget>
  <resources/>
  <connections/>
